css/body.css
.clearfix{
    content: "";
    clear: both;
    display: table;
}
.section1{
    max-width: 50%;
    margin: 150px auto;
}
.section1 p{
    text-align: center;
}
.section2{
    max-width: 50%;
    margin: 100px auto;   
}
.event{
    text-align: center;
    font-size: 30px;
    font-weight: 300;
    color:#909497;
}

.section2 h1{
    text-align: center;
    padding: 30px;
    color: #c85a54;
}
.section2 p{
    text-align: center;
}

/* CARD STYLING */
.main-container{
    display: flex;
    justify-content:center;
    align-items: center;
    flex-wrap: wrap;
    padding: 30px;
} 
.main-container .card{
    max-width: 300px;
    padding: 30px;
    height: 215px;
    position: relative;
    background: #e7bfc0;
    padding: 30px;
    margin: 30px;
    display: flex;
    flex-direction: column;
    border-radius: 10px;
    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
    transition: 0.3s ease-in-out;
}
.main-container .card:hover{
    height: 550px;
    animation: pulse;
    animation-duration: 2s;
}
.main-container .card .image-box{
    position: relative;
    width: 260px;
    height: 260px;
    top: -60px;
    left: 20px;
}
.image-box img{
    border-radius: 10px;
}
.main-container .card .content{
    margin-top: -80px;
    visibility: hidden;
    text-align: center;
    transition: 0.3s ease-in-out;
}
.main-container .card:hover .content{
    visibility: visible;
    opacity: 1;
    margin-top: -40px;
    transition-delay: 0.3s;
}

/* button styling */
.button{
    justify-content: center;
    display: flex;
    padding: 100px 0 0 0;
}
.button a{
    padding: 15px;
    background: #c85a54;
    color: black;
}
.button a:hover{
    background:grey !important ;
    animation: pulse;
    animation-duration: 2s;
}
@media all and (max-width: 469px){
    .button a{
        border-radius: 24px;
    }
}

/* curved video styling */
.curved{
    width: 100%;
    text-align: center;
    background-image: url('../images/pp11.jpeg');
    padding: 0;
    position: relative;
    overflow: hidden;
}
.curved h1{
    margin-top: -300PX;
    padding-bottom: 100px;
}
.curved p{
    margin: 0 5rem;
}
.curved svg{
    display: block;
}
.curved.upper{
    background:#f5f5f5;
}
.video-bg{
    position: absolute;
    height: 300px;
}
.play{
    justify-content: center;
    display: flex;
    padding: 100px;
}
.play a{
    margin-top: 20px;
     background: transparent;
}
.play a:hover{
    animation: pulse;
    animation-duration: 2s;
}

/* features and amenities styling */
.f-container{
    display: flex;
    flex-direction: column;
    text-align: center;
    justify-content: center;
    align-items: center;
    padding: 30px;
    margin-top: 200px;
}
.f-container p{
    padding: 30px;
    font-size: 20px;
}
.f-text{
    max-width: 50%;
    margin: 20px auto;
}
.fl-container{
    display: flex;
    justify-content: space-between;
    padding: 100px;
    align-items: center;
    margin: 40px;
   
}

.f-list ul li{
    margin-bottom: 20px;
}
  .swiper {
    width: 100%;
    padding-top: 50px;
    padding-bottom: 50px;
    overflow: hidden;
  }

  .swiper-slide {
    background-position: center;
    background-size: cover;
    width: 300px;
    height: 300px;
  }

  .swiper-slide img {
    display: block;
    width: 100%;
  }

